--- a/frontend/assets/css/form_validation.css
+++ b/frontend/assets/css/form_validation.css
@@ -1,6 +1,91 @@
-.form_error{
+@keyframes pulse {
+    0% {
+        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.5);
+    }
+
+    50% {
+        box-shadow: 0 0 0 8px rgba(0, 0, 0, 0);
+    }
+
+    100% {
+        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    }
+}
+
+.form_error {
     display: none;
     color: red;
     font-size: 12px;
     margin-top: 5px
+}
+
+.image-preview {
+    width: 300px;
+    height: 300px;
+    border: 2px solid #dddddd;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    color: #cccccc;
+}
+
+.image-preview img {
+    /* display: none; */
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.selected-row {
+    background-color: #A3D8FF !important;
+    color: white;
+}
+
+.position-relative {
+    position: relative;
+}
+
+.status-indicator {
+    position: absolute;
+    bottom: 0;
+    right: 13px;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    border: 2px solid #fff;
+    animation: pulse 1.5s infinite;
+}
+
+.online {
+    background-color: #6BCB77;
+}
+
+.pending {
+    background-color: #4D96FF;
+}
+
+.deleyed {
+    background-color: #FF6B6B;
+}
+
+.tooltip-custom {
+    display: none;
+    overflow: auto;
+    position: absolute;
+    bottom: -290%;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #fff;
+    color: #333;
+    padding: 10px;
+    border-radius: 5px;
+    white-space: nowrap;
+    font-size: 13px;
+    font-weight: 500;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.position-relative:hover .tooltip-custom {
+    display: block;
 }
