--- a/frontend/assets/css/form_validation.css
+++ b/frontend/assets/css/form_validation.css
@@ -73,7 +73,7 @@
     display: none;
     overflow: auto;
     position: absolute;
-    bottom: -290%;
+    top: -290%;
     left: 50%;
     transform: translateX(-50%);
     background-color: #fff;
@@ -84,8 +84,18 @@
     font-size: 13px;
     font-weight: 500;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    min-width: 20vh;
 }
 
 .position-relative:hover .tooltip-custom {
     display: block;
+}
+
+.blur-bg {
+    filter: blur(1.5px);
+    transition: 0.1s ease;
+}
+
+.container-fluid{
+    min-height: 100vh !important;
 }
